fixed bug where users could still interact with page behind create event popup

--- a/styles/create-button.css
+++ b/styles/create-button.css
@@ -15,6 +15,7 @@
 
 .creating #backgroundCover {
   z-index: 100000000000;
+  pointer-events: all;
   opacity: 1;
 }
 #newGroupFrame {
